guide/src/components/HtmlContent.module.scss
@import '~cultureamp-style-guide/styles/type';
@import '~cultureamp-style-guide/styles/color';
@import '~cultureamp-style-guide/styles/border';

.contentContainer {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  ul,
  ol,
  blockquote {
    max-width: 650px;
  }
}

.htmlContent {
  composes: contentContainer;
}

.h1,
.htmlContent h1 {
  @include ca-type-ideal-title;
  margin-top: 0;
  margin-bottom: $ca-grid;
}

.h2,
.htmlContent h2 {
  @include ca-type-ideal-display;
  margin-top: $ca-grid * 3;
  margin-bottom: $ca-grid;
}

.h3,
.htmlContent h3 {
  @include ca-type-ideal-heading;
  margin-top: 0;
  margin-bottom: $ca-grid;
}

.h4,
.htmlContent h4 {
  @include ca-type-ideal-heading;
  margin-top: 0;
  margin-bottom: $ca-grid;
  font-weight: $ca-weight-light;
}

.h5,
.htmlContent h5 {
  @include ca-type-ideal-body;
  font-weight: $ca-weight-semibold;
  margin-top: 0;
  margin-bottom: $ca-grid;
}

.h6,
.htmlContent h6 {
  @include ca-type-ideal-small;
  font-weight: $ca-weight-book;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
}

.p,
.htmlContent p {
  margin: $ca-grid 0;
  @include ca-type-ideal-body;
}

.introParagraph {
  composes: p;
  @include ca-type-ideal-lede;
}

// Ensure that nested paragraphs use the larger font size.
.introParagraph .p {
  @include ca-type-ideal-lede;
}

.table,
.htmlContent table {
  width: 100%;
  th {
    text-align: left;
    border-bottom: 2px solid $ca-border-color;
  }
  td {
    border-bottom: 1px solid $ca-border-color;
  }
  p:first-child {
    margin-top: 0;
  }
  p:last-child {
    margin-bottom: 0;
  }
}

.ul,
.ol,
.htmlContent ul,
.htmlContent ol {
  margin-bottom: $ca-grid;
}

.li,
.htmlContent li {
  @include ca-type-ideal-body;
}

.blockquote,
.htmlContent blockquote {
  border-left: 2px solid $ca-border-color;
  margin-left: 20px;
  padding-left: 18px;
}

.link,
.htmlContent a[href] {
  @include ca-type-ideal-body;
  color: $ca-link-text-color;
  text-decoration: none;
  &:hover,
  &:active,
  &:focus,
  &:visited {
    color: $ca-link-hover-text-color;
  }
  &:active,
  &:focus {
    outline-color: add-tint($ca-palette-wisteria, 30%);
    outline-offset: 2px;
  }
}

.buttonReset {
  appearance: none;
  display: inline;
  background: transparent;
  color: inherit;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border: none;
}

.buttonLink {
  composes: buttonReset;
  composes: link;
  padding: 0 2px;
  // Note: the `font: inherit` rule in buttonReset clashes with the font mixin in `link`.
  // We include the mixin again here to ensure the rules are correctly applied.
  @include ca-type-ideal-body;
}

.img,
.htmlContent img {
  max-width: 100%;
}

.hr {
  border: none;
  border-bottom: 1px solid add-alpha($ca-palette-ink, 10%);
  margin-top: $ca-grid;
  margin-bottom: $ca-grid * 2;
}

